--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -15,6 +15,14 @@ deploy:
         valuesFiles:
           - k8s/values.postgres.yaml
         remote: true
+      
+      - name: prometheus-stack
+        chartPath: prometheus-community/kube-prometheus-stack
+        valuesFiles:
+          - k8s/values.prometheus.yaml
+        remote: true
+        namespace: monitoring
+        createNamespace: true
 
       - name: userservice
         chartPath: k8s/charts/appservice
