--- a/src/UserService/UserService.csproj
+++ b/src/UserService/UserService.csproj
@@ -1,9 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
-
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
-  
   <ItemGroup>
     <PackageReference Include="Dapper" Version="2.0.78"/>
     <PackageReference Include="Npgsql" Version="5.0.3"/>
@@ -11,12 +9,13 @@
     <PackageReference Include="Serilog" Version="2.10.0"/>
     <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1"/>
     <PackageReference Include="Serilog.AspNetCore" Version="4.0.0"/>
+    <PackageReference Include="prometheus-net.AspNetCore" Version="4.1.1"/>
+    <PackageReference Include="prometheus-net" Version="4.1.1"/>
+    <PackageReference Include="prometheus-net.AspNetCore.HealthChecks" Version="4.1.1"/>
   </ItemGroup>
-
   <ItemGroup>
     <Content Include="db\migrations\**\*.sql">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
-
 </Project>
